bk_ida/gccida/c3/assemble_zeros
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/assemble_zeros/src/varasm.c:1751:40: error: use of undeclared identifier 'off_8A2198'
fprintf( asm_out_file, ( const char *)&off_8A2198 + 4, "\t.zero\t", ( unsigned int)size); 
                                       ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/assemble_zeros/src/obj/varasm.o] Error 1
